Repair comment submission behavior and improve inter-comment spacing

--- a/app/assets/stylesheets/_extensions.scss
+++ b/app/assets/stylesheets/_extensions.scss
@@ -23,3 +23,8 @@
 .ocn-brand{
   @extend .navbar-brand;
 }
+
+button {
+  @extend .btn;
+  @extend .btn-default;
+}
